--- a/src/App.css
+++ b/src/App.css
@@ -2,49 +2,12 @@ body
 {
   min-width: 810px;
 }
-.headerItem
-{
-  color:blue;
-  border: 1px solid grey;
-  height: 50px;
-  margin-left: 2px;
-  margin-top:2px;
-  padding-top: 20px;
-  padding-left: 15px;
-}
 .listItem
 {
   border-left: 1px solid grey;
   margin-left: 2px;
   border-bottom: 1px solid grey;
   border-right: 1px solid grey;
-
-}
-img
-{
-  display: inline-block;
-  width:10%;
-  margin-top: 10px;
-  margin-left: 5px;
- }
-
-span
-{
-  display: inline-block;
-  font-size: 15px;
-  text-align: center;
-  margin-left: 10px;
-  margin-bottom: 5px;
-}
-.right
-{
-  float: right;
-  width: 79.87%;
-  display: inline-block;
-  min-height: 357px;
-  border-right: 1px solid grey;
-  border-bottom: 1px solid grey;
-  color:green;
 }
 .input-hidden {
   position: absolute;
@@ -54,4 +17,15 @@ span
   float: left;
   display: inline-block;
   width: 20%;
+}
+tr, td
+{
+  border: 1px solid green;
+}
+table
+{
+  border-collapse: collapse;
+  width: 79.87%;
+  min-height: 357px;
+  color:green;
 }
